Add unit-tests for commentSystem

--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "comments-exercise",
   "dependencies": {
     "angular": "1.5.x",
-    "bootstrap": "3.3.x"
+    "bootstrap": "3.3.x",
+    "angular-mocks": "1.5.x"
   }
 }
