--- a/package.json
+++ b/package.json
@@ -4,10 +4,21 @@
   "repository": "https://github.com/tedmx/comments-exercise",
   "license": "MIT",
   "devDependencies": {
-    "bower": "^1.7.7"
+    "bower": "^1.7.7",
+    "http-server": "^0.9.0",
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.22",
+    "karma-chrome-launcher": "^0.2.3",
+    "karma-firefox-launcher": "^0.1.7",
+    "karma-jasmine": "^0.3.8"
   },
   "scripts": {
     "postinstall": "bower install",
+
+    "pretest": "npm install",
+    "test": "karma start karma.conf.js",
+    "test-single-run": "karma start karma.conf.js --single-run",
+    
     "prestart": "npm install",
     "start": "http-server ./app -a localhost -p 8000 -c-1"
   }
